--- a/works/landin/index.html
+++ b/works/landin/index.html
@@ -1,432 +1,4 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-/*all site button css strats here*/
-button:focus {
-    outline: none;
-}
-.btn:focus {
-    box-shadow: inherit;
-}
-/*all site button css ends here*/
-
-/*fonts css strats here*/
-
-@font-face {
-    font-family: Nunito_reg;
-    src: url(../webfonts/font/Nunito/Nunito-Regular.ttf);
-}
-@font-face {
-    font-family: Nunito_semibold;
-    src: url(../webfonts/font/Nunito/Nunito-SemiBold.ttf);
-}
-@font-face {
-    font-family: Nunito_bold;
-    src: url(../webfonts/font/Nunito/Nunito-Bold.ttf);
-}
-.common_font_one {
-    font-family: Nunito_semibold;
-}
-.common_font_two {
-    font-family: Nunito_reg;
-}
-.common_font_three {
-    font-family: Nunito_bold;
-}
-/*fonts css ends here*/
-
-/*common css strats here*/
-.text_color_one {
-    color: #2f91ff;
-}
-.text_color_two {
-    color: #fff;
-}
-.text_color_there {
-    color: #333333;
-}
-.p_one {
-    font-size: 21px;
-    font-family: Nunito_semibold;
-}
-.p_two {
-    font-size: 17px;
-    font-family: Nunito_reg;
-}
-.p_there {
-    font-size: 15px;
-    font-family: Nunito_reg;
-}
-.p_color_one {
-    color: #444444;
-}
-.p_text_color:hover {
-    color: #444444;
-}
-.p_color_two {
-    color: #777777;
-}
-.p_text {
-    font-size: 20px;
-    padding-bottom: 40px;
-}
-.h_part_one {
-    font-size: 32px;
-    font-family: Nunito_bold;
-}
-.h_part_two {
-    font-size: 25px;
-    font-family: Nunito_semibold;
-}
-.btn_font_size {
-    font-size: 18px;
-}
-.button_font_size {
-    font-size: 16px;
-}
-.btn_color {
-    background: #777777;
-}
-.btn_hover:hover {
-    background: #2f91ff;
-    transition: 0.5s;
-}
-.btn_border {
-    border: none;
-}
-.button {
-    font-size: 15px;
-}
-.background_color {
-    background: #2f91ff;
-}
-.hover_color:hover {
-    color: #2f91ff;
-    transition: 0.5s;
-}
-/* slick slider css strats here*/
-.slick-dots {
-    list-style: none;
-    position: absolute;
-    margin: 0;
-    margin-right: 0px;
-    bottom: 67px;
-    right: 0;
-    width: 33.33%;
-    margin-right: 8.333333%;
-    text-align: center;
-}
-.slick-dots li {
-    display: inline-block;
-    font-size: 0;
-    width: 50px;
-    height: 5px;
-    background: #b4d3fa;
-    cursor: pointer;
-}
-.slick-dots li button {
-    display: none;
-}
-.slick-dots li.slick-active {
-    background: #2f90fc;
-}
-/*slick slider css ends here*/
-/*common css ends here*/
-
-/*top_header css strats here*/
-.top_header {
-    background: #e4effc;
-}
-.top_header p {
-    margin-bottom: 0px;
-}
-.btn:hover {
-    background: #2f91ff;
-    color: #fff;
-    transition: 0.5s;
-    border-radius: inherit;
-}
-.top_header .btn:focus,
-.btn:active {
-    box-shadow: none;
-}
-/*top_header css ends here*/
-.sticky {
-	position: fixed;
-	top: 0;
-	right: 0;
-	left: 0;
-	z-index: 999;
-	background: #383838;
-	width: 100%;
-	box-shadow: 0px 0px 10px 0px #0000002e;
-	border-bottom: 1px solid #ededed;
-	transition: 0.3s;
-}
-/*banner css strats here*/
-.banner {
-    background: url(../image/ban.png) no-repeat;
-    background-size: cover;
-    padding-top: 186px;
-    position: relative;
-}
-.banner::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #2f91ff;
-    opacity: 22%;
-}
-.banner_text {
-    padding-bottom: 100px;
-}
-.banner h1 {
-    font-size: 50px;
-}
-.banner span {
-    line-height: 55px;
-}
-.about_header {
-    padding: 87px 0px 44px 0px;
-}
-.about_header p {
-    font-size: 20px;
-}
-.highlight {
-    margin-bottom: -90px;
-    background: #fff;
-    box-shadow: 0px 0px 22px 1px #86848426;
-}
-.highlight i {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    font-size: 30px;
-    color: #2f91ff;
-}
-.highlight h3 {
-    font-size: 26px;
-}
-.highlight p {
-    padding: 0px 10px 0px 11px;
-}
-/*banner css ends here*/
-
-/*about css strats here*/
-#about{
-    padding: 72px 0px 82px 0px;
-}
-.img {
-    position: relative;
-
-}
-.img::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 370px;
-    height: 370px;
-    background: #2f91ff;
-    z-index: -1;
-    box-shadow: 0px 0px 17px 4px #77777738;
-    border-radius: 5px;
-}
-.img img {
-    margin-top: 25px;
-    margin-left: 14px;
-}
-.text button {
-    border: 2px solid #2f91ff;
-}
-.text button:hover {
-    border-radius: 5px;
-    border: 2px solid #2f91ff;
-    background: #fff;
-    color: #000;
-    transition: 0.5s;
-}
-/*about css ends here*/
-
-/*service css strats here*/
-#service{
-    background: #f7fafe;
-    padding: 69px 0px 36px 0px;
-}
-#service .one {
-    border-radius: 10px;
-    padding: 43px 50px 22px 50px;
-}
-#service .one h5 {
-    padding: 22px 0px 3px 0px;
-}
-#service .one:hover {
-    box-shadow: 0px 0px 56px 5px #479bf924;
-    transition: 0.5s;
-}
-/*service css ends here*/
- 
-/*featured css strats here*/
-#featured{
-    padding: 68px 0px 89px 0px;
-}
-.featured_one {
-    background: url(../image/featured_img.png) no-repeat;
-    background-size: cover;
-    padding-top: 110px;
-    padding-bottom: 120px;
-}
-.featured_one button {
-    padding: 15px 21px 12px 22px;
-}
-.featured_two {
-    background: url(../image/featured_img2.png) no-repeat;
-    background-size: cover;
-    padding: 26px 0px 32px 0px;
-}
-.featured_two button {
-    padding: 8px 18px 10px 18px;
-}
-.featured_three {
-    background: url(../image/featured_img3.png) no-repeat;
-    background-size: cover;
-    padding: 20px 0px 27px 0px;
-}
-.featured_three p {
-    line-height: 24px;
-}
-#featured .slick-dots {
-    position: inherit;
-    top: 16px;
-    bottom: 0px;
-    margin-right: 0px;
-    right: 0px;
-    width: inherit;
-}
-/*featured css ends here*/
-
-/*Homelisting css strats here*/
-#home_listing{
-    background: #f7fafe;
-    padding: 67px 0px 88px 0px;
-}
-.listing_one {
-    border: 1px solid #e3e3e3;
-}
-.listing_one h5 {
-    font-size: 22px;
-    padding: 25px 0px 10px 0px;
-}
-.listing_card:hover h5 {
-    color: #2f91ff;
-    transition: 0.5s;
-}
-.listing_card:hover p {
-    color: #333333;
-    transition: 0.5s;
-}
-.listing_card:hover button {
-    background: #2f91ff;
-    transition: 0.5s;
-}
-.add_height {
-    margin: 20px 0px 0px 0px;
-    padding: 10px 0px 11px 0px;
-    border-top: 2px solid #e4effc;
-}
-.add_height a i {
-    padding-right: 4px;
-
-}
-#home_listing .slick-dots {
-    position: inherit;
-    top: 16px;
-    bottom: 0px;
-    margin-right: 0px;
-    right: 0px;
-    width: inherit;
-}
-/*Homelisting css ends here*/
-
-/*testimonial css strats here*/
-#testimonial {
-    padding: 76px 0px 29px 0px;
-}
-.test_heading p{
-    font-size: 20px;
-}
-.reveiw {
-    padding: 48px 90px 43px 53px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 17px 17px #2f91ff0a;
-    position: relative;
-}
-.reveiw h4 {
-    margin: 0px 0px 2px 0px;
-}
-
-.reveiw p {
-    color: #333333;
-    padding: 21px 0px 0px 0px;
-    font-size: 24px;
-    font-family: Nunito_semibold;
-    margin: 0px 0px 21px 0px;
-}
-.reveiw span {
-    color: #777777;
-}
-.client_image {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: url(../image/test.png) center no-repeat;
-    background-size: cover;
-    border-radius: 0 8px 8px 0;
-    box-shadow: 10px 0px 20px 10px #2f91ff0f;
-}
-/*testimonial css ends here*/
-
-/*Subscribe css strats here*/
-#Subscribe {
-    background: url(../image/Subscribe.png) no-repeat;
-    background-size: cover;
-    position: relative;
-    padding: 72px 0px 77px 0px;
-}
-#Subscribe::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #000000;
-    opacity: 43%;
-}
-#Subscribe p {
-    font-size: 21px;
-    padding: 3px 0px 22px 0px;
-}
-#Subscribe form {
-    padding: 7px 0px 7px 10px;
-    background: #fff;
-    border-radius: 5px 0px 0px 5px;
-}
-#Subscribe .sub input {
-    padding: 10px 25px 9px 25px;
-    border-radius: 0px 5px 5px 0px;
-}
-#Subscribe form input {
-    border: none;
-}
-/*Subscribe css ends here*/
-
-/*footer css strats here*/
-#footer {
-    background: #2f91ff;<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -903,6 +475,3 @@ button:focus {
 </body>
 
 </html>
-
-}
-/*footer css ends here*/
