--- a/works/chaty/index.html
+++ b/works/chaty/index.html
@@ -335,7 +335,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-12">
-                    <p class="font_one text-white">Copyrights 2020 © <span class="font_six">Chati</span> | Crafted by <span class="font_six">Marufa Jhuma</span></p>
+                    <p class="font_one text-white">Copyrights 2020 © <span class="font_six">Chati</span></p>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-12 text-right">
                     <p class="font_one text-white">Terms of Service | Privacy Policy</p>
