--- a/works/eventa/index.html
+++ b/works/eventa/index.html
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="content">
-                        <img src="img/speakers/1.jpg" class="img-fluid" alt="">
+                        <img src="img/speakers/1.png" class="img-fluid" alt="">
                         <div class="overlay">
                             <p>Jonathon Doe <span>Ceo of LogicHunt</span></p>
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -84,7 +84,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="content">
-                        <img src="img/speakers/2.jpg" class="img-fluid" alt="">
+                        <img src="img/speakers/2.png" class="img-fluid" alt="">
                         <div class="overlay">
                             <p>Jonathon Doe <span>Ceo of LogicHunt</span></p>
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="content">
-                        <img src="img/speakers/3.jpg" class="img-fluid" alt="">
+                        <img src="img/speakers/3.png" class="img-fluid" alt="">
                         <div class="overlay">
                             <p>Jonathon Doe <span>Ceo of LogicHunt</span></p>
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -106,7 +106,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="content">
-                        <img src="img/speakers/4.jpg" class="img-fluid" alt="">
+                        <img src="img/speakers/4.png" class="img-fluid" alt="">
                         <div class="overlay">
                             <p>Jonathon Doe <span>Ceo of LogicHunt</span></p>
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -117,7 +117,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="content">
-                        <img src="img/speakers/5.jpg" class="img-fluid" alt="">
+                        <img src="img/speakers/5.png" class="img-fluid" alt="">
                         <div class="overlay">
                             <p>Jonathon Doe <span>Ceo of LogicHunt</span></p>
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -128,7 +128,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="content">
-                        <img src="img/speakers/6.jpg" class="img-fluid" alt="">
+                        <img src="img/speakers/6.png" class="img-fluid" alt="">
                         <div class="overlay">
                             <p>Jonathon Doe <span>Ceo of LogicHunt</span></p>
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -268,34 +268,34 @@
                                     <img src="img/testimonial/sig1.png" class="img-fluid" alt="">
                                 </div>
                                 <div class="testimonial_details">
-                                    <h5>Natalia Camroon <span class="text-white">Online Speaker</span></h5>
-                                    <p class="text-white">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only</p>
+                                    <h5>Emma Olivia <span class="text-white">Broker/Owner</span></h5>
+                                    <p class="text-white">I’m a Broker. But I was a beginner in “Technological Entrepreneurship”. After some days, I could know about this website. Then I went to the event. Now, I know about this topic. I’m happy about the event.</p>
                                     <div class="social">
                                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                                         <a href="#"><i class="fab fa-pinterest-p"></i></a>
                                     </div>
-                                    <img src="img/testimonial/sig2.png" class="img-fluid" alt="">
+                                    <img src="img/testimonial/sig1.png" class="img-fluid" alt="">
                                 </div>
                                 <div class="testimonial_details">
-                                    <h5>Kathy Harry <span class="text-white">Youtuber</span></h5>
-                                    <p class="text-white">The leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with</p>
+                                    <h5>Emma Olivia <span class="text-white">Broker/Owner</span></h5>
+                                    <p class="text-white">I’m a Broker. But I was a beginner in “Technological Entrepreneurship”. After some days, I could know about this website. Then I went to the event. Now, I know about this topic. I’m happy about the event.</p>
                                     <div class="social">
                                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                                         <a href="#"><i class="fab fa-pinterest-p"></i></a>
                                     </div>
-                                    <img src="img/testimonial/sig3.png" class="img-fluid" alt="">
+                                    <img src="img/testimonial/sig1.png" class="img-fluid" alt="">
                                 </div>
 
                             </div>
                             <div class="col-lg-5 testimonail_slider_image testimonial_person">
                                 <div class="person_image">
-                                    <img src="img/testimonial/img1.jpg" class="img-fluid" alt="">
+                                    <img src="img/testimonial/img1.png" class="img-fluid" alt="">
                                 </div>
                                 <div class="person_image">
-                                    <img src="img/testimonial/img2.jpg" class="img-fluid" alt="">
+                                    <img src="img/testimonial/2.jpg" class="img-fluid" alt="">
                                 </div>
                                 <div class="person_image">
-                                    <img src="img/testimonial/img3.jpg" class="img-fluid" alt="">
+                                    <img src="img/testimonial/3.jpg" class="img-fluid" alt="">
                                 </div>
 
                             </div>
@@ -309,7 +309,7 @@
     <section id="video">
         <div class="overlay">
             <div class="container text-center">
-                <a class="venobox" data-autoplay="true" data-vbtype="video" href="https://youtu.be/QE8kNh52EeU?t=32"><i class="fas fa-play-circle"></i></a>
+                <a class="venobox" href="img/banner.png"><i class="fas fa-play-circle"></i></a>
             </div>
         </div>
     </section>
@@ -353,18 +353,18 @@
 
     <footer class="bg1">
         <div class="container">
-            <p class="text-white text-center">Copyright 2020 © <span class="color2">Eventa</span> | Crafted by <span class="color2">Torufa</span></p>
+            <p class="text-white text-center">Copyright 2020 © <span class="color2">Eventa</span></p>
         </div>
     </footer>
 
-
+      
     <script src="js/jquery-1.1.1.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/venobox.min.js"></script>
     <script src="js/custom.js"></script>
-
+    
 </body>
 
 </html>
