--- a/works/landin/index.html
+++ b/works/landin/index.html
@@ -459,7 +459,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-12 text-center text_color_two pt-lg-3 pt-md-3 pt-sm-3">
-                    <p class="text">Copyrights 2019 ©<span class="p_color_one">LandIn</span> | Crafted by <span class="p_color_one">Dev Marufa</span></p>
+                    <p class="text">Copyrights 2019 ©<span class="p_color_one">LandIn</span></p>
                 </div>
             </div>
         </div>
