--- a/works/lawoffice/index.html
+++ b/works/lawoffice/index.html
@@ -562,7 +562,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-12">
-                    <p class="roboto_reg text-white">Copyrights 2020 © <span class="roboto_bold">Law Office</span> | Crafted by <span class="roboto_bold">Marufa Jhuma</span></p>
+                    <p class="roboto_reg text-white">Copyrights 2020 © <span class="roboto_bold">Law Office</span></p>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                     <p class="text-right roboto_reg text-white">Terms of Service | Privacy Policy</p>
