--- a/works/socale/index.html
+++ b/works/socale/index.html
@@ -400,7 +400,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="text-center font_three common_color_three common_font_size">Copyrights 2020 © <span class="font_one common_color_two common_font_size">SOCALE</span> | Crafted by <span class="font_one common_color_two common_font_size">Marufa Jhuma</span></p>
+                    <p class="text-center font_three common_color_three common_font_size">Copyrights 2020 © <span class="font_one common_color_two common_font_size">SOCALE</span></p>
                 </div>
             </div>
         </div>
