--- a/works/socale/index.html
+++ b/works/socale/index.html
@@ -85,7 +85,7 @@
                         <p class="common_p_two"> Now, SOCALE helps every client to grow their business.
                             We help the client on everysite, which they need. That's
                             how, we are working.</p>
-                        <button type="button" class="common_background_one">Hire us</button>
+                        <button type="button" class="common_background_one text-white">Hire us</button>
                     </div>
                 </div>
             </div>
@@ -153,7 +153,7 @@
                     <div class="about_text">
                         <h3 class="common_headline">SOCIALE creates the trending design.</h3>
                         <p class="common_p_two">Sience our main target is creating websites, we try to our best to make the trending design. Which can help to keep pace with the modern websites. Moreover, we make a great, perfect logo saturated with your website. Also modern color combination with be present. Again, if you give desing we can make it with pixel perfect.</p>
-                        <button type="button" class="font_four common_background_one">view Demo</button>
+                        <button type="button" class="font_four common_background_one common_color_three">view Demo</button>
                     </div>
                 </div>
                 <div class="col-lg-6 work_card col-md-6">
@@ -172,7 +172,7 @@
                         <h3 class="common_headline">SOCALE can do Digital Marketing.</h3>
                         <p class="common_p_two">For great popularity, digital marketing is a must. We can do all the needed digital marketing for your
                             website. Like: Search engine optimization (SEO),Content marketing, Social media marketing, Email marketing, (PPC) Pay-per-click advertising, etc. Also, we can control your E-commerce website.</p>
-                        <button type="button" class="font_four common_background_one">view Demo</button>
+                        <button type="button" class="font_four common_background_one common_color_three">view Demo</button>
                     </div>
                 </div>
             </div>
